[gd_scene load_steps=10 format=2]

[ext_resource path="res://Src/Minigames/LockpickMinigame/LockpickMinigame.gd" type="Script" id=1]
[ext_resource path="res://Assets/Minigames/LockpickOutline.png" type="Texture" id=2]
[ext_resource path="res://Assets/Minigames/LockpickBackground.png" type="Texture" id=3]
[ext_resource path="res://Assets/Minigames/LockpickLock.png" type="Texture" id=4]
[ext_resource path="res://Assets/Minigames/LockpickPin.png" type="Texture" id=5]
[ext_resource path="res://Assets/Minigames/Lockpick.png" type="Texture" id=6]
[ext_resource path="res://Assets/Minigames/LockpickInside.png" type="Texture" id=7]
[ext_resource path="res://Assets/Minigames/LockpickTensionWrench.png" type="Texture" id=8]
[ext_resource path="res://Assets/Fonts/MagoFont3_16.tres" type="DynamicFont" id=9]

[node name="LockPickMinigame" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}
minigame_type = 3

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="LockpickInside" type="Sprite" parent="."]
position = Vector2( -40, 24 )
z_index = 1
texture = ExtResource( 7 )
offset = Vector2( 60, 0 )

[node name="Pins" type="Node2D" parent="."]
position = Vector2( -10, 11 )

[node name="LockpickPin1" type="Sprite" parent="Pins"]
position = Vector2( -90, -42 )
z_index = 5
texture = ExtResource( 5 )

[node name="LockpickPin2" type="Sprite" parent="Pins"]
position = Vector2( -63, -26 )
texture = ExtResource( 5 )

[node name="LockpickPin3" type="Sprite" parent="Pins"]
position = Vector2( -36, -30 )
texture = ExtResource( 5 )

[node name="LockpickPin4" type="Sprite" parent="Pins"]
position = Vector2( -9, -25 )
texture = ExtResource( 5 )

[node name="LockpickOutline" type="Sprite" parent="."]
z_index = 1
z_as_relative = false
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="LockpickLock" type="Sprite" parent="."]
position = Vector2( 72, 0 )
z_index = 6
z_as_relative = false
texture = ExtResource( 4 )

[node name="Lockpick" type="Sprite" parent="LockpickLock"]
visible = false
position = Vector2( 60.2346, 74.6983 )
rotation = 3.14159
texture = ExtResource( 6 )

[node name="LockpickTensionWrench" type="Sprite" parent="LockpickLock"]
visible = false
position = Vector2( -18.3188, -55.2243 )
texture = ExtResource( 8 )

[node name="Tween" type="Tween" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
visible = false

[node name="TryUI" type="Label" parent="."]
margin_left = -80.0
margin_top = 40.0
margin_right = -35.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 9 )
text = "Tries: 5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
